--- a/SportsMatching/src/main/webapp/MAIN.html
+++ b/SportsMatching/src/main/webapp/MAIN.html
@@ -60,6 +60,6 @@ function goMatching(){
 }
 
 function goMarketing(){
-	window.location.href="SportMarketing.html"
+	window.location.href="MyPage.html"
 }
 </script>
