--- a/SportsMatching/src/main/webapp/login.html
+++ b/SportsMatching/src/main/webapp/login.html
@@ -38,7 +38,7 @@
         </div>
         <div class="panel-btn">
             <div class="row">
-                <button class="loginbtn" id="loginbtn" onclick="tryLogin()">로그인</button>
+                <button class="loginbtn" id="loginbtn" onclick='tryLogin()'>로그인</button>
             </div>            
         </div>
     </div>
@@ -48,7 +48,7 @@
             <div class="findform">
                 <button class="findid" id="findid">아이디찾기</button>
                 <button class="findpw" id="findpw">비밀번호찾기</button>
-                <button class="signupgo" id="signupgo" onclick="goSignup()">회원가입</button>
+                <button class="signupgo" id="signupgo" onclick='goSignup()'>회원가입</button>
             </div>
         </div>       
     </div>
@@ -60,7 +60,7 @@ function tryLogin(){
     	var id = userid.value;
     	var pw = userpw.value;
     	
-    	sessionStorage.setItem("id", id);
+    	sessionStorage.setItem("ssid", JSON.stringify(id));
     	    		
         $.ajax ( {
             url: "./login_request.jsp",
@@ -71,7 +71,7 @@ function tryLogin(){
             	if (data.trim() == "로그인성공")
             	{            	  
             	  alert("로그인 성공!");
-            	  window.location.href="MAIN.html"
+            	  window.location.href="MAIN.html";
             	}
             	else if(data.trim() == "로그인실패"){
             		alert("로그인 정보가 틀립니다.");
