--- a/SportsMatching/src/main/webapp/SportsMatching.html
+++ b/SportsMatching/src/main/webapp/SportsMatching.html
@@ -203,8 +203,8 @@ input[type="time"]::-webkit-calendar-picker-indicator {
 $(document).ready(() => { 
 	var d = new Date();
 	date_input.value = d.getFullYear() + "-" + (d.getMonth() + 1).toString().padStart(2, "0") + "-" + d.getDate().toString().padStart(2, "0");
-	time_input1.value = d.getHours() + ":" + d.getMinutes();
-	time_input2.value = d.getHours() + ":" + d.getMinutes();
+	time_input1.value = d.getHours().toString().padStart(2, "0") + ":" + d.getMinutes().toString().padStart(2, "0");
+	time_input2.value = d.getHours().toString().padStart(2, "0") + ":" + d.getMinutes().toString().padStart(2, "0");
 })
 
 function matching()
