--- a/SportsMatching/src/main/webapp/MAIN.html
+++ b/SportsMatching/src/main/webapp/MAIN.html
@@ -52,7 +52,7 @@ function goChating(){
 }
 
 function goRating(){
-	window.location.href="Ranking.html"
+	window.location.href="userRating.html"
 }
 
 function goMatching(){
