--- a/SportsMatching/src/main/webapp/login.html
+++ b/SportsMatching/src/main/webapp/login.html
@@ -69,7 +69,7 @@ function tryLogin(){
             	if (data.trim() == "로그인성공")
             	{            	  
             	  alert("로그인 성공!");
-            	  sessionStorage.setItem("ssid", id);
+            	  sessionStorage.setItem("ssid", userid.value);
             	  window.location.href="MAIN.html";
             	}
             	else if(data.trim() == "로그인실패"){
