--- a/SportsMatching/src/main/webapp/MAIN.html
+++ b/SportsMatching/src/main/webapp/MAIN.html
@@ -10,7 +10,7 @@
 
 <body onload="wasLogin()">
      <div id='title_area'>
-         <a href='login.html' class='content_text' id='title_text'>Sports Matching</a>
+         <a href='MAIN.html' class='content_text' id='title_text'>Sports Matching</a>
 
              <div id='login_status'>
                  <a href='login.html' class='menu_button content_text' id="changeLogin">로그인</a>
