--- a/SportsMatching/src/main/webapp/MyPage.html
+++ b/SportsMatching/src/main/webapp/MyPage.html
@@ -8,12 +8,12 @@
     </style>
 </head>
 
-<body>
+<body onload = 'userload()'>
      <div id='title_area'>
           <a href='login.html' class='content_text' id='title_text'>Sports Matching</a>
 
           <div id='login_status'>
-               <a href='login.html' class='menu_button content_text'>홈으로</a>
+               <a href='MAIN.html' class='menu_button content_text'>홈으로</a>
           </div>
       </div>
 
@@ -49,8 +49,8 @@
                 </div>
             </div>
         </div>
-        
     </div>
+    
 
     <div class="panel-btn">
         <div class="row">
@@ -64,9 +64,19 @@
 </body>
 <script src='./js/jquery-3.6.1.min.js'></script>
 <script>
+
+var ssid = sessionStorage.getItem("ssid");
+
+function userload(){
+	$.ajax ({
+		url : "./MyPage_request.jsp",
+		method : "POST",
+		data : { ssid : ssid },
+        dataType : "text",
+    })
+}
+
 function Withdrawal(){
-	
-	var ssid = sessionStorage.getItem("ssid");
 	
 	$.ajax ({
 		url : "./Withdrawal.jsp",
