--- a/SportsMatching/src/main/webapp/signupcomplete.html
+++ b/SportsMatching/src/main/webapp/signupcomplete.html
@@ -8,7 +8,7 @@
     </style>
 </head>
 
-<body>
+<body onclick="load_user_id()">
      <div id='title_area'>
           <a href='login.html' class='content_text' id='title_text'>Sports Matching</a>
 
@@ -30,7 +30,7 @@
       <div  style="margin : 40px 20px 0px 8px; background-color : white;text-align: center;">
           <div class="signupcompleterow" style=" text-align: center;margin-top: 20px;padding: 15px 0px 15px 0px;">
              <label class="signupcomplete" style="font-weight: bold; font-size: 25px;">반갑습니다.</label>
-             <label class="signupcomplete" style="font-weight: bold; font-size: 25px;">id님</label>
+             <label class="signupcomplete" id="signup_user_id"style="font-weight: bold; font-size: 25px;"></label>
            </div>
       </div>
 
@@ -39,3 +39,31 @@
             
 
 </body>
+<script src='./js/jquery-3.6.1.min.js'></script>
+<script>
+	function load_user_id(){
+		var user_id = sessionStorage.getItem('ssid');
+		document.getElementById("signup_user_id").innerText = user_id;
+		
+		
+		$.ajax ({
+			url : "./userRating_request.jsp",
+			method : "POST",
+			data : { id : id, isWinner_checked : isWinner_checked, MVP_checked : MVP_checked },
+	        dataType : "text",
+	        success: (data) => {
+	        	if(data.trim() == "성공"){
+	        		alert("평가 성공");
+	        		window.location.href = "MAIN.html";
+	            }
+	            else if(data.trim() == "서칭실패"){
+	        	    alert("아이디가 잘못 되었습니다.");
+	            }else if(data.trim() == "실패"){
+	            	alert("오류");
+	            }else{
+	            	alert("체크박스를 1개이상 선택하세요.");
+	            }
+	        }
+	    })
+	}
+</script>
