--- a/SportsMatching/src/main/webapp/MyPage.html
+++ b/SportsMatching/src/main/webapp/MyPage.html
@@ -13,7 +13,7 @@
           <a href='login.html' class='content_text' id='title_text'>Sports Matching</a>
 
           <div id='login_status'>
-               <a href='login.html' class='menu_button content_text'>홈으로</a>
+               <a href='MAIN.html' class='menu_button content_text'>홈으로</a>
           </div>
       </div>
 
