--- a/SportsMatching/src/main/webapp/MyPage.html
+++ b/SportsMatching/src/main/webapp/MyPage.html
@@ -13,7 +13,7 @@
           <a href='MAIN.html' class='content_text' id='title_text'>Sports Matching</a>
 
           <div id='login_status'>
-               <a href='MAIN.html' class='menu_button content_text'>홈으로</a>
+               <a href='MAIN.html' class='menu_button content_text' onclick = "sign_out()">로그아웃</a>
           </div>
       </div>
 
@@ -96,5 +96,11 @@ function Withdrawal(){
             }
         }
     })
+}
+
+function sign_out(){
+	alert("로그아웃 되었습니다.");
+	sessionStorage.clear();
+	window.location.href = "MAIN.html";
 }
 </script>
