--- a/SportsMatching/src/main/webapp/signupcomplete.html
+++ b/SportsMatching/src/main/webapp/signupcomplete.html
@@ -8,12 +8,12 @@
     </style>
 </head>
 
-<body onclick="load_user_id()">
+<body onload="load_user_id()">
      <div id='title_area'>
-          <a href='login.html' class='content_text' id='title_text'>Sports Matching</a>
+          <a href='MAIN.html' class='content_text' id='title_text'>Sports Matching</a>
 
           <div id='login_status'>
-               <a href='MAIN.html' class='menu_button content_text'>로그인</a>
+               <a href='MAIN.html' class='menu_button content_text'>홈으로</a>
           </div>
       </div>
 
@@ -42,18 +42,18 @@
 </body>
 <script src='./js/jquery-3.6.1.min.js'></script>
 <script>
-	var ssid = sessionStorage.getItem('ssid');
+var ssid = sessionStorage.getItem('ssid');
 		
-	function userload(){
-		$.ajax ({
-			url : "./MyPage_request.jsp",
-			method : "POST",
-			data : { ssid : ssid },
-	        dataType : "text",
-	        success : (data) => {
-	        	var userinfo = data.split(',');
-	        	document.getElementById("signup_user_id").innerText = userinfo[2];
-	        }
-	    })
-	}
+function load_user_id(){
+	$.ajax ({
+		url : "./MyPage_request.jsp",
+		method : "POST",
+		data : { ssid : ssid },
+        dataType : "text",
+        success : (data) => {
+	       	var userinfo = data.split(',');
+	       	document.getElementById("signup_user_id").innerText = userinfo[2] + "님";
+        }
+    })
+}
 </script>
