--- a/SportsMatching/src/main/webapp/userRating.html
+++ b/SportsMatching/src/main/webapp/userRating.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id='title_area'>
-        <a href='login.html' class='content_text' id='title_text'>Sports Matching</a>
+        <a href='MAIN.html' class='content_text' id='title_text'>Sports Matching</a>
     </div>
 
 
