--- a/SportsMatching/src/main/webapp/MAIN.html
+++ b/SportsMatching/src/main/webapp/MAIN.html
@@ -84,6 +84,6 @@ function goMatching(){
 }
 
 function goMarketing(){
-	window.location.href="SportsMarketing.html"
+	window.location.href="SportMarketing.html"
 }
 </script>
