--- a/SportsMatching/src/main/webapp/SportMarketing.html
+++ b/SportsMatching/src/main/webapp/SportMarketing.html
@@ -185,7 +185,7 @@
 
 <body>
     <div class="nav">
-        <div class="nav-title"> 우리동네스포츠 </div>
+        <div class="nav-title" href="MAIN.html"> 우리동네스포츠 </div>
         <div class=" nav-right-items">
             <div class="nav-item">
                 <button type="botton" onclick="location.href='MAIN.html'">HOME </button>
@@ -322,8 +322,6 @@
                                 "제작 : 저지불가"
                             </div>
 
-                            <script src="script.js"></script>
-                            <script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script>
 </body>
 
 </html>
