--- a/SportsMatching/src/main/webapp/SportsMatching_List.html
+++ b/SportsMatching/src/main/webapp/SportsMatching_List.html
@@ -212,6 +212,12 @@ $(document).ready(() => {
         			tags += "<a class='content_input_text content_desc_text content_input2' id='many_input2'>" + target.many2[i] + "</a>";
         			tags += "</div>";
         			
+        			tags += "<div class='content_box'>";
+        			tags += "<div class='content_image' style='background-image:url(./images/our_img.png);'></div>";
+        			tags += "<div class='content_text content_desc_text content_desc_head'>지역</div>";
+        			tags += "<a class='content_input_text content_desc_text content_input1' id='location_input'>" + target.location[i] + "</a>";
+        			tags += "</div>";
+        			
         			/*
         			tags += "<div class='content_box'>";
         			tags += "<div class='content_image' style='background-image:url(./images/our_img.png);'></div>";
