--- a/SportsMatching/src/main/webapp/EvaluationAndRanking.html
+++ b/SportsMatching/src/main/webapp/EvaluationAndRanking.html
@@ -76,8 +76,8 @@ body {
 </head>
 
 <body>
-  <div class="ranking">
-    Ranking
+  <div class="ranking" onclick = "goMain()">
+    Sports Matching
   </div>
 
   <div class="box">
@@ -258,6 +258,9 @@ body {
 
 	});
 
+  function goMain(){
+	  window.location.href = "MAIN.html"
+  }
   </script>
 </body>
 
